@@ -3,8 +3,8 @@ package com.teamfineshyt.service;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
-import com.teamfineshyt.dto.CategoryRequest;
-import com.teamfineshyt.dto.CategoryResponse;
+import com.teamfineshyt.dto.category.CategoryRequest;
+import com.teamfineshyt.dto.category.CategoryResponse;
 import com.teamfineshyt.mapper.CategoryMapper;
 import com.teamfineshyt.model.Category;
 import com.teamfineshyt.repo.CategoryRepository;
@@ -14,12 +14,13 @@ import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
-public class CategoryServiceImpl implements CategoryService{
+public class CategoryServiceImpl implements CategoryService {
     private final CategoryRepository categoryRepository;
+
     @Override
     public CategoryResponse createCategory(CategoryRequest request) {
-        if(categoryRepository.existsByCategoryName(request.getName())){
-            throw new RuntimeException("Category Already exist with name"+ request.getName());
+        if (categoryRepository.existsByCategoryNameIgnoreCase(request.getCategoryName())) {
+            throw new RuntimeException("Category Already exists");
         }
         Category category = CategoryMapper.toCategoryEntity(request);
         Category newCategory = categoryRepository.save(category);
@@ -28,9 +29,15 @@ public class CategoryServiceImpl implements CategoryService{
 
     @Override
     public CategoryResponse updateCategory(Long id, CategoryRequest request) {
-        Category category = categoryRepository.findById(id).orElseThrow(()->
-                new RuntimeException("Category not found with ID : "+id));
-        category.setCategoryName(request.getName());
+        Category category = categoryRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Category not found"));
+
+        if (!category.getCategoryName().equalsIgnoreCase(request.getCategoryName())
+                && categoryRepository.existsByCategoryNameIgnoreCase(request.getCategoryName())) {
+            throw new RuntimeException("Category name already exists");
+        }
+
+        category.setCategoryName(request.getCategoryName().trim());
         category.setDetails(request.getDetails());
 
         Category newCategory = categoryRepository.save(category);
@@ -39,15 +46,22 @@ public class CategoryServiceImpl implements CategoryService{
 
     @Override
     public void deleteCategory(Long id) {
-        Category category = categoryRepository.findById(id).orElseThrow(()->
-                new RuntimeException("Category not found with id : "+id));
+        Category category = categoryRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Category not found"));
+
+        // Safe delete
+        if (category.getProducts() != null && !category.getProducts().isEmpty()) {
+            throw new RuntimeException("Cannot delete category with existing products");
+        }
+
         categoryRepository.delete(category);
     }
 
     @Override
     public List<CategoryResponse> getAllCategory() {
-        return categoryRepository.findAll().stream()
+        return categoryRepository.findAll()
+                .stream()
                 .map(CategoryMapper::toCategoryResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
